# uber-poet

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements.txt  setup.py
examples/: bazelgenproj_test.sh
tests/: BUILD.bazel  test_bazel_integration.py  test_buck_integration.py  test_cp_integration.py  test_cpulogger.py  test_dotreader.py  test_filegen.py  test_imports_selector.py  test_locreader.py  test_moduletree.py  test_statemanagement.py  utils.py
uberpoet/: BUILD.bazel  blazeprojectgen.py  cpprojectgen.py  cpulogger.py  dotreader.py  filegen.py  loccalc.py  locreader.py  memoize.py  moduletree.py  multisuite.py  statemanagement.py  util.py
uberpoet/blazeprojectgen/: __init__.py  base_blazeprojectgen.py  blazeprojectgen.py  ios_blazeprojectgen.py  java_bazelprojectgen.py
uberpoet/commandlineutil/: __init__.py  base_config.py  config.py  graph.py  ios_config.py  java_config.py
uberpoet/filegen/: __init__.py  filegen.py  imports_selector.py  java_filegen.py  objc_filegen.py  progress_reporter.py  swift_filegen.py
uberpoet/genproj/: __init__.py  genproj.py  genproj_ios.py  genproj_java.py
uberpoet/resources/: mock_bazel_ios_apptemplate.bzl
uberpoet/resources/ios/: mock_appdelegate  mock_bazel_libtemplate.bzl  mock_bazel_workspace  mock_buck_apptemplate.bzl  mock_buck_libtemplate.bzl
uberpoet/resources/java/: mock_bazel_apptemplate.bzl  mock_bazel_libtemplate.bzl  mock_main_template.java  mock_module_bazel
