load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@aspect_rules_py//py:defs.bzl", "py_binary")

exports_files([ 
    "requirements.txt",
])

py_binary(
    name = "genproj",
    srcs = [ "genproj.py" ],
    deps = [ "//uberpoet" ],
)

format_multirun(
    name = "format",
    python = "@aspect_rules_lint//format:ruff",
)
