module(
    name = "uber_poet",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_py", version = "1.0.0-rc0")
bazel_dep(name = "rules_python", dev_dependency = True, version = "0.29.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pip")

bazel_dep(name = "aspect_rules_lint", dev_dependency = True, version = "1.0.3")