load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "uberpoet",
    srcs = glob([ "**/*.py" ]),
    data = glob([ "resources/**" ]),
    deps = [
        requirement("toposort"),
        requirement("configparser"),
    ],
    visibility = [ "//visibility:public" ],
)